// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextArea > clear should reset value 1`] = `
<DocumentFragment>
  <textarea>
    Hello, World!
  </textarea>
  <button
    type="button"
  >
    Clear
  </button>
</DocumentFragment>
`;

exports[`TextArea > clear should reset value 2`] = `
<DocumentFragment>
  <textarea>
    Hello, World!2
  </textarea>
  <button
    type="button"
  >
    Clear
  </button>
</DocumentFragment>
`;

exports[`TextArea > clear should reset value 3`] = `
<DocumentFragment>
  <textarea />
  <button
    type="button"
  >
    Clear
  </button>
</DocumentFragment>
`;

exports[`TextArea > should handle input 1`] = `
<DocumentFragment>
  <textarea />
  <button
    type="button"
  >
    Clear
  </button>
</DocumentFragment>
`;

exports[`TextArea > should handle input 2`] = `
<DocumentFragment>
  <textarea>
    Hello, World!
  </textarea>
  <button
    type="button"
  >
    Clear
  </button>
</DocumentFragment>
`;

exports[`TextArea > should handle input with composition change events 1`] = `
<DocumentFragment>
  <textarea />
  <button
    type="button"
  >
    Clear
  </button>
</DocumentFragment>
`;

exports[`TextArea > should render 1`] = `
<DocumentFragment>
  <textarea>
    Hello, World!
  </textarea>
</DocumentFragment>
`;
